# Mentor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  analog_agent.py  convert_docs.py  environment.yml  execution_error.md  gpt_run.py  groupchat.yaml  problem_set.tsv  prompt_template_complex.md  prompt_template_wo_chain_of_thought.md  prompt_template_wo_context.md  prun-4o.sh  prun-deepseek-r1.sh  prun-o3-mini.sh  prun.sh  pyproject.toml  quick_start.md  run.sh  simulation_error.md  success_rate.py
configs/: OAI_CONFIG_LIST.example
configs/agents/: captain.yaml  groupchat.yaml  groupchat_wo_cos.yaml
configs/prompt/: prompt4checks.md  prompt_pilot.md  prompt_template.md  prompt_template_ngspice.md  prompt_template_ty.md  retrieval_prompt.md
docs/: Amplifier.md  Bandgap Reference Verification_RAK.md  Bandgap References.md  CurrentMirror.md  IEEE_paper_1994.md  Integrator.md  Inverter.md  Opamp_Differentiator_Amplifier.md  Oscillator.md  Razavi BGR.md  TB_BGR_netlist.md  opamp.md  opamp_spec.md  opamp_spec.txt
docs/Amplifier/: Amplifier.md  Amplifier_meta.json  Amplifier_parsed.md
docs/Bandgap Reference Verification_RAK/: Bandgap Reference Verification_RAK.md  Bandgap Reference Verification_RAK_meta.json  Bandgap Reference Verification_RAK_parsed.md
docs/Bandgap References/: Bandgap References_parsed.md
docs/Bandgap_Reference_Verification_RAK/: Bandgap_Reference_Verification_RAK_parsed.md
docs/Bandgap_References/: Bandgap_References.md  Bandgap_References_meta.json  Bandgap_References_parsed.md
docs/CurrentMirror/: CurrentMirror.md  CurrentMirror_meta.json  CurrentMirror_parsed.md
docs/IEEE_paper_1994/: IEEE_paper_1994.md  IEEE_paper_1994_meta.json  IEEE_paper_1994_parsed.md
docs/Integrator/: Integrator.md  Integrator_meta.json  Integrator_parsed.md
docs/Inverter/: Inverter.md  Inverter_meta.json  Inverter_parsed.md
docs/Opamp_Differentiator_Amplifier/: Opamp_Differentiator_Amplifier.md  Opamp_Differentiator_Amplifier_meta.json  Opamp_Differentiator_Amplifier_parsed.md
docs/Oscillator/: Oscillator.md  Oscillator_meta.json  Oscillator_parsed.md
docs/Razavi BGR/: Razavi BGR_meta.json  Razavi BGR_parsed.md
docs/Razavi_BGR/: Razavi_BGR.md  Razavi_BGR_parsed.md
docs/Schmitt_Trigger_Lecture_notes/: Schmitt_Trigger_Lecture_notes.md  Schmitt_Trigger_Lecture_notes_meta.json  Schmitt_Trigger_Lecture_notes_parsed.md
docs/TB_BGR_netlist/: TB_BGR_netlist.md
docs/opamp/: opamp.md  opamp_meta.json  opamp_parsed.md
docs/opamp_spec/: opamp_spec.md
problem_check/: Adder.py  Amplifier.py  BGR.py  CurrentMirror.py  Differentiator.py  Integrator.py  Inverter.py  Opamp.py  Oscillator.py  PLL.py  Schmitt.py  Subtractor.py  VCO.py
sample_design/: p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p2.py  p20.py  p21.py  p22.py  p23.py  p24.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  test_all_sample_design.py
sample_design/subcircuits/: charge_pump.py  dff.py  diffop.py  divider.py  logic_gates.py  loop_filter.py  opamp.py  pfd.py  ring_vco.py
scripts/: convert_docs.py  pass_cal.py  success_rate.py
src/: enums.py  rag.py
src/types/: code.py  enums.py
src/typings/: analog.py  usage.py
subcircuit_lib/: p10_lib.py  p12_lib.py  p13_lib.py  p14_lib.py  p15_lib.py  p1_lib.py  p2_lib.py  p3_lib.py  p4_lib.py  p5_lib.py  p6_lib.py  p7_lib.py  p8_lib.py  p9_lib.py
