[project]
name = "analogcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag2[captainagent,interop-pydantic-ai,retrievechat]>=0.7.5",
    "markitdown>=0.0.1a4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pyspice==1.5.0",
    "scipy>=1.15.2",
]

[[tool.uv.index]]
name = "default"
url = "https://oa-mirror.mediatek.inc/repository/pypi/simple/"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
# If you set it to `true`, it will be moved to the end of the prioritized list.
# In other words, it will search pypi first, then here.
default = true
